@@ -7,6 +7,7 @@
 	* Ignoring scheduled recording check for same scheduled recording (LP: #437142)
 	* Added iIGNORE_SQLITE3_THREADSAFE_CHECK to disable sqlite3_threadsafe check for Hardy compile (LP: #433996)
 	* Added support for EPG in Hong Kong from Raymond Tau (LP: #477388)
+	* Set timeout for EPG events to 1 second (LP: #434994) 
 
 2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>
 
